# A.R.T.E.M.I.S

./: .env.example  .gitignore  ARCHITECTURE_FLOW.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt  techcorp_docs_demo.py  test_queries.py
.cursor/plans/: rag_as_agent_tool_and_docs.plan.md
artemis/: __init__.py
artemis-env/: pyvenv.cfg
artemis-env/Scripts/: activate  activate.bat
artemis/agent/: __init__.py  config.py  context.py  graph.py  run.py  state.py  supervisor.py
artemis/api/: __init__.py  __main__.py
artemis/rag/: __init__.py  tools.py
dataset/: kaggle.py
docs/: AGENT_ARCHITECTURE.md  AGENT_QUICKSTART.md  AGENT_TEST_PROMPTS.md  ARCHITECTURE_FLOW.md  CURRENT_STATE.md  DEPLOY_AWS_FREE.md  EXTENDING_ARTEMIS.md  HYBRID_SEARCH_IMPLEMENTATION.md  METADATA_FILTERING.md  MVP_AND_CONTRIBUTOR_PLAN.md  QUICK_REFERENCE.md  RAG_CUSTOMIZATION.md  RAG_USAGE.md  README.md  TESTING_AGENT.md
examples/: README.md  README_travel_example.md  agent_demo.py  comprehensive_test.py  pdf_rag_example.py  pdf_rag_quick_test.py  query_demo.py  techcorp_docs_demo.py  travel_converter_example.py
postman/: README.md
scripts/: __init__.py  manage_collections.py  verify_ingestion.py
tests/: DATA_REQUIREMENTS.md  README.md  TEST_FILES_REQUIREMENTS.md  WHAT_TO_ADD.md  __init__.py  conftest.py  test_agent_flow.py  test_agent_rag.py  test_agent_registry.py  test_chunkers.py  test_colorama.py  test_csv_converter.py  test_embeddings_retrieval.py  test_ingestion_pipeline.py  test_loaders.py  test_restaurant_converter.py
(+98 files in other folders)
