[project]
name = "artemis"
version = "0.1.0"
description = "Adaptive Retrieval & Tool-Enabled Multimodal Intelligence System"
requires-python = ">=3.12.8"
dependencies = [
    # Core framework
    "dspy>=2.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    # Vector database
    "qdrant-client>=1.7.0",
    # Embeddings
    "sentence-transformers>=2.2.0",
    # LLM providers
    "groq>=0.4.0",
    "openai>=1.0.0",
    # Data
    "kagglehub>=0.2.0",
    "pandas>=2.0.0",
    # Multimodal (optional for Phase 1)
    # "livekit>=0.9.0",
    # HTTP API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

